--- a/templates/index.html
+++ b/templates/index.html
@@ -160,9 +160,8 @@
                         </a>
                         <div uk-drop="mode: click;offset:9" class="header_dropdown profile_dropdown border-t">
                             <ul>
-                                <li><a href="setting.html"> Account setting </a> </li>
-                                <li><a href="explore.html">explore </a> </li>
-                                <li><a href="#"> Help </a> </li>
+                                <li><a href="{%url 'profile'%}"> Account setting </a> </li>
+                                
                                 <li><a href="{%url 'Log-Out'%}"> Log Out</a></li>
                             </ul>
                         </div>
