--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
                         </a>
                         <div uk-drop="mode: click;offset:9" class="header_dropdown profile_dropdown border-t">
                             <ul>
-                                <li><a href="{%url 'profile'%}"> Account setting </a> </li>
+                                <li><a href="{%url 'profile-settings'%}"> Account setting </a> </li>
                                 
                                 <li><a href="{%url 'Log-Out'%}"> Log Out</a></li>
                             </ul>
@@ -116,7 +116,7 @@
                             <div class="flex justify-between items-center px-4 py-3">
                                 <div class="flex flex-1 items-center space-x-4">
                                     
-                                    <span class="block capitalize font-semibold "> {{post.user}} </span>
+                                    <span class="block capitalize font-semibold "><a href="{% url 'profile' post.user%}"> {{post.user}} </a> </span>
                                 </div>
                               <div>
                                 <a href="#"> <i class="icon-feather-more-horizontal text-2xl hover:bg-gray-200 rounded-full p-2 transition -mr-1 "></i> </a>
