--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-	<title>Profile - {{user.username}}</title>
+	<title>Profile - {{user_profile.user.username}}</title>
    <!-- <link rel="icon" href="images/fav.png" type="image/png" sizes="16x16"> -->
     
     <link rel="stylesheet" href="{% static 'css/main.min.css' %}">
@@ -27,13 +27,17 @@
 	<section>
 			<div class="feature-photo">
 				<figure><img src="{% static 'images/resources/timeline-1.jpg' %}" alt=""></figure>
-				<form>
+				<form action = "{%url 'follow_user'%}" method = 'POST'>
+					{% csrf_token %}
 					<div class="add-btn">
 					<span style="color: white; font-size: 27px; margin-right: 520px;"><b><u><a href="/">Home</a></u></b></span>
 					<span style="color: white; font-size: 27px;"><b>{{posts_length}} posts</b></span>
 					<span style="color: white; font-size: 27px;"><b>1.7m followers</b></span>
 					<span style="color: white; font-size: 27px;"><b>3.5k following</b></span>
-					<a href="" title="" data-ripple=""><button style="background-color: #ffc0cb; border: #ffc0cb;">Follow</button></a>
+					<input type = "hidden" value = "{{user.username}}" name = "follower"/>
+					<input type = "hidden" value = "{{user_object.username}}" name = "user"/>
+
+					<a href="" title="" data-ripple=""><button type = "submit" style="background-color: #ffc0cb; border: #ffc0cb;">Follow</button></a>
 					
 					</div>
 				</form>
@@ -50,7 +54,7 @@
 						<div class="col-lg-2 col-sm-3">
 							<div class="user-avatar">
 								<figure>
-									<img src="{{profile.profileimg.url}}" style="height: 250px; width: 100%;" alt="">
+									<img src="{{user_profile.profileimg.url}}" style="height: 250px; width: 100%;" alt="">
 									
 								</figure>
 							</div>
@@ -59,7 +63,7 @@
 							<div class="timeline-info">
 								<ul>
 									<li class="admin-name">
-									  <h5 style="color: black;white-space: nowrap; width: 110px; font-size: 27px;"><b>{{user.username}}</b><!--<i class="fa fa-check-circle" style="color: #48dbfb;" aria-hidden="true"></i>--></h5>
+									  <h5 style="color: black;white-space: nowrap; width: 110px; font-size: 27px;"><b>{{user_profile.username}}</b><!--<i class="fa fa-check-circle" style="color: #48dbfb;" aria-hidden="true"></i>--></h5>
 									  <!--<span>Group Admin</span>-->
 									</li>
 								</ul>
@@ -71,7 +75,7 @@
 		</section><!-- top area -->
 		<section>
 			<div class="bio">
-				{{profile.bio}}
+				{{user_profile.bio}}
 			</div>
 		</section>
 		
