--- a/templates/profile.html
+++ b/templates/profile.html
@@ -32,13 +32,19 @@
 					<div class="add-btn">
 					<span style="color: white; font-size: 27px; margin-right: 520px;"><b><u><a href="/">Home</a></u></b></span>
 					<span style="color: white; font-size: 27px;"><b>{{posts_length}} posts</b></span>
-					<span style="color: white; font-size: 27px;"><b>1.7m followers</b></span>
-					<span style="color: white; font-size: 27px;"><b>3.5k following</b></span>
+					<span style="color: white; font-size: 27px;"><b>{{followers_count}} followers</b></span>
+					<span style="color: white; font-size: 27px;"><b>{{following_count}} following</b></span>
 					<input type = "hidden" value = "{{user.username}}" name = "follower"/>
-					<input type = "hidden" value = "{{user_object.username}}" name = "user"/>
-
-					<a href="" title="" data-ripple=""><button type = "submit" style="background-color: #ffc0cb; border: #ffc0cb;">Follow</button></a>
 					
+					
+					<input type = "hidden" value = "{{user_object.username}}" name = "user"/>
+					
+					{% if user_object.username == user.username %}
+					<a href="{% url 'profile-settings'%}" title="" data-ripple="">Account settings</a>
+
+					{% else %}
+					<a href="" title="" data-ripple=""><button type = "submit" style="background-color: #ffc0cb; border: #ffc0cb;">{{button_text}}</button></a>
+					{% endif %}
 					</div>
 				</form>
 
